<resources>
    <string name="app_name">Book Store</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="book_store">Book Store</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="new_to_application">New to here? <b><u>Create an Account</u></b></string>
    <string name="full_name">Full Name</string>
    <string name="email_address">Email Address</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="register">Register</string>
    <string name="login_here">Already Registered? <b><u>Login Here</u></b></string>
    <string name="favourites">Favourites </string>
    <string name="cart">Cart</string>
    <string name="sign_out">Sign Out</string>
    <string name="profile">Profile</string>
    <string name="orders">Orders</string>
    <string name="book_title">Book Title</string>
    <string name="book_author"><u>Book Author</u></string>
    <string name="book_price">Book Price</string>
    <string name="add_to_cart">Add To Cart</string>
    <string name="item_quantities">Items</string>
    <string name="buy_button">Place Order</string>
    <string name="total_price">Total Price</string>
    <string name="total_price_rupees">Total Price     ₹</string>
    <string name="rupees">Rs.</string>
    <string name="submit">Submit</string>
    <string name="pincode">PinCode</string>
    <string name="city">City</string>
    <string name="street">Street</string>
    <string name="houseno">HouseNo</string>
    <string name="state">State</string>
    <string name="mobile">Mobile</string>
    <string name="Rs">₹</string>
    <string name="order_placed">Order Placed !</string>
    <string name="orderId">OrderID</string>
    <string name="continue_shopping">Continue Shopping?</string>
    <string name="order">order</string>
    <string name="_4_5">4.5</string>
    <string name="by">By</string>
    <string name="order_placed_on">Order Placed on</string>
    <string name="date">Date</string>
    <string name="add_address">Add Address</string>
    <string name="review_user_name">User Name</string>
    <string name="review_user_text">Review</string>
    <string name="book_description">Description</string>
    <string name="add_review">Add Review</string>
    <string name="review">Review</string>
    <string name="write_your_review">Write your review</string>
    <string name="discount">Discount</string>
    <string name="book_mrp">MRP</string>
    <string name="off">off</string>
    <string name="address">Address</string>
    <string name="delivered_address">Delivered Address :</string>
    <string name="delivery_address">Delivery Address</string>
    <string name="subscription_message_text_view">Your free access to the app has reached the limit, need to pay for further usage of app</string>
    <string name="pay">Pay</string>
</resources>