<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="8dp"
    android:layout_marginEnd="8dp"
    android:layout_marginTop="4dp"
    android:layout_marginBottom="4dp">

    <androidx.cardview.widget.CardView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:cardCornerRadius="18dp"
        android:elevation="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/cart_book_image"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/cart_book_title"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:srcCompat="@tools:sample/avatars" />

            <TextView
                android:id="@+id/cart_book_author"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_marginStart="6dp"
                android:layout_marginTop="4dp"
                android:text="@string/book_author"
                app:layout_constraintBottom_toBottomOf="@+id/cart_book_image"
                app:layout_constraintEnd_toEndOf="@+id/cart_book_title"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/cart_book_image"
                app:layout_constraintTop_toBottomOf="@+id/cart_book_title" />

            <TextView
                android:id="@+id/cart_book_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginStart="6dp"
                android:layout_marginTop="10dp"
                android:text="@string/book_price"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/cart_book_image"
                app:layout_constraintEnd_toEndOf="@+id/cart_book_title"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/cart_book_image"
                app:layout_constraintTop_toBottomOf="@+id/cart_book_author"
                app:layout_constraintVertical_bias="0.714" />

            <TextView
                android:id="@+id/cart_book_title"
                android:layout_width="142dp"
                android:layout_height="30dp"
                android:layout_marginBottom="6dp"
                android:layout_marginStart="6dp"
                android:layout_marginTop="10dp"
                android:maxLines="1"
                android:text="@string/book_title"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/cart_book_author"
                app:layout_constraintStart_toEndOf="@+id/cart_book_image"
                app:layout_constraintTop_toTopOf="@+id/cart_book_image" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="@+id/cart_book_image"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.914"
                app:layout_constraintStart_toEndOf="@+id/cart_book_image"
                app:layout_constraintTop_toTopOf="@+id/cart_book_image"
                app:layout_constraintVertical_bias="0.961">

                <ImageButton
                    android:id="@+id/book_cart_minus"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:background="@drawable/ic_baseline_remove_circle_24"/>

                <TextView
                    android:id="@+id/book_cart_value"
                    android:layout_width="wrap_content"
                    android:layout_height="19dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="16dp"
                    android:text="@string/item_quantities"
                    android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

                <ImageButton
                    android:id="@+id/book_cart_add"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="16dp"
                    android:background="@drawable/ic_baseline_add_circle_24"/>

            </LinearLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>